# Kalman-Based-Parameter-Estimation

./: .gitignore  README.md  environment.yml  main.py  paths.py  pyproject.toml
ADEnKF/: .gitignore  uq_experiments_spec.md
ADEnKF/examples/: l63_param_est_demo.py
ADEnKF/experiments/: uq_plots.py  uq_plots_explanation.md
ADEnKF/experiments/glv_param_est/: aggregate_sweep.py  glv_param_est_run.py  glv_visualize_estimates.py
ADEnKF/experiments/gradient_decomposition/: gradient_decomposition_lg_run.py  gradient_decomposition_run.py
ADEnKF/experiments/l63_param_est/: README.md  l63_param_est_run.py
ADEnKF/methods/: em_enkf.py
ADEnKF/torchEnKF/: nn_templates.py
Data/Lorentz63/: README.md  generate_data.py  sigma10.0000_rho28.0000_beta2.6667_dt0.0100.pt  visualize_dataset.py
Data/gLV/: glv_data_generator.py  glv_diagnostics.py  glv_visualize.py
Data/gLV/data/: glv_ahidden0p00_obs.npz  glv_ahidden0p00_truth.npz  glv_ahidden0p05_obs.npz  glv_ahidden0p05_truth.npz  glv_ahidden0p10_obs.npz  glv_ahidden0p10_truth.npz  glv_ahidden0p15_obs.npz  glv_ahidden0p15_truth.npz  glv_ahidden0p20_obs.npz  glv_ahidden0p20_truth.npz
Data/gLV/data_no_noise/: Untitled  glv_ahidden0p00_obs.npz  (+1 more)
Experiments/obs_dt_sweep/: obs_dt_sweep.py  plot_trajectories.py  visualize_result.py
experiments/glv/: glv_data_generator.py  glv_esmda.py  glv_ienks.py  glv_ms.py  glv_param_est_demo.py  glv_visualize_estimates.py
experiments/l63/: gradient_decomposition_run.py  l63_param_est_run.py  uq_plots.py
methods/: em_enkf.py
src/enkf_ppe/: __init__.py
torchEnKF/: __init__.py
(+17 files in other folders)
